k8s/myapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: deepthyck7/myapp:b8f83e6-20251020-0303
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerhub-secret
